--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.2.0",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
